внесение правок по рекомендации из модуля 2